--- a/src/styles/AdminPage.css
+++ b/src/styles/AdminPage.css
@@ -68,5 +68,10 @@
 }
 
 .admin__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 1.5rem;
+
 }
