--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,7 +13,7 @@
   margin: 0 auto;
   padding: 0 2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   gap: 0.5rem;
   width: 100%;
